# nixops-digitalocean

./: .gitignore  Makefile  README.md  coverage-tests.py  default.nix  flake.nix  overrides.nix  pyproject.toml  release.nix  setup.py  shell.nix  tests.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
ci/: check-flake8.sh  check-formatting.sh  check-mypy.sh  check-nix-files.sh  check-nix-formatting.sh  check-poetry.sh  check-tests.sh  lint-docs.sh  mypy-ratchet.sh  run-ratchet.sh
doc/: requirements.txt
nix/: default.nix  digital-ocean.nix  volume.nix
nixops_digitalocean/: plugin.py
nixops_digitalocean/backends/: droplet.py
nixops_digitalocean/data/: nixos-infect
nixops_digitalocean/nix/: default.nix  droplet.nix
nixops_digitalocean/resources/: volume.py
nixopsdigitalocean/: plugin.py
nixopsdigitalocean/backends/: digital_ocean.py
nixopsdigitalocean/resources/: volume.py
tests/functional/: single_droplet_base.nix  single_droplet_has_hello.nix  single_droplet_ipv6.nix  single_droplet_rollback.nix  single_droplet_test.py  test_deploys_nixos.py  test_ipv6.py  test_rollback_rollsback.py  test_start_starts.py  test_stop_stops.py
