[tool.poetry]
name = "nixops_digitalocean"
version = "2.0"
description = "NixOps plugin for Digital Ocean"
authors = [
    "Robert Djubek <contact@mostlyabsurd.com>",
    "Matan Shenhav <m.shenhav@gmail.com>"
]
license = "LGPL-3.0-only"
include = [ "nixops_digitalocean/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
python-digitalocean = "^1.15.0"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
nose = "^1.3.7"
coverage = "^5.2.1"

[tool.poetry.plugins."nixops"]
digitalocean = "nixops_digitalocean.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"