[tool.poetry]
name = "nixops_digitalocean"
version = "2.0"
description = "NixOps plugin for Digital Ocean"
authors = [
  "Robert Djubek <contact@mostlyabsurd.com>",
  "Matan Shenhav <m.shenhav@gmail.com>",
]
license = "LGPL-3.0-only"
include = ["nixops_digitalocean/nix/*.nix"]

[tool.poetry.dependencies]
python = "^3.7"
python-digitalocean = "^1.15.0"
PrettyTable = "0.7.2"
pluggy = "^0.13.1"
typeguard = "2.7.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
nixops = { git = "https://github.com/NixOS/nixops.git", branch = "master" }
mypy = "^0.770"
black = "^19.10b0"
nose = "^1.3.7"
coverage = "^5.2.1"
flake8 = "^3.8.1"
lxml = "^4.5.0"
# 1.4.2 is broken
jsonpickle = "1.4.1"
# docs
livereload = "^2.6.1"
sphinx = "^3.3.1"

[tool.poetry.plugins."nixops"]
digitalocean = "nixops_digitalocean.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
